pkl-core/src/test/files/LanguageSnippetTests/input/errors/traceThenIterateUndefinedMember.pkl
undefinedValue: String

items = new Listing {
  undefinedValue
}

lookup = new Mapping {
  ["x"] = 1
}

result =
  let (_ = trace(items))
    new Listing {
      for (item in items) {
        lookup.containsKey(item)
      }
    }

output {
  value = result
}
